--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "An express.js project to learn form handling using formidable",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Shubham Purwar",
   "license": "ISC",
