--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Shubham Purwar",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.287.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "formidable": "^2.1.1"
+    "formidable": "^2.1.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
